@@ -1,4 +1,4 @@
-.\" $Id: tmux.1,v 1.40 2008-06-19 21:45:46 nicm Exp $
+.\" $Id: tmux.1,v 1.41 2008-06-19 22:04:02 nicm Exp $
 .\"
 .\" Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -569,7 +569,7 @@ The default is
 Set the maximum number of lines held in window history.
 This setting applies only to new windows - existing window histories are not
 resized and retain the limit at the point they were created.
-.It Ic prefix-key Ar key
+.It Ic prefix Ar key
 Set the current prefix key.
 .It Xo Ic status
 .Op Ic on | Ic off
